--- a/index.html
+++ b/index.html
@@ -16,6 +16,12 @@
             font-family: 'Inter', sans-serif;
             background-color: #0d1117; /* Darker base */
             transition: opacity 0.5s ease-in-out; /* Global transition for fade */
+            /* Added background image directly to the body */
+            background-image: url('https://i.imgur.com/qmJKSRj.jpeg'); /* Your photo link */
+            background-size: cover;
+            background-position: center;
+            background-repeat: no-repeat;
+            background-attachment: fixed;
         }
 
         /* Fade-in effect on page load */
@@ -36,7 +42,7 @@
             to { opacity: 0; }
         }
 
-        /* Subtle dynamic background */
+        /* Subtle dynamic background overlay */
         .background-overlay {
             position: fixed;
             top: 0;
@@ -47,6 +53,7 @@
             background-size: 400% 400%;
             animation: gradientAnimation 15s ease infinite;
             z-index: -1;
+            opacity: 0.7; /* Make the gradient semi-transparent to allow image to show */
         }
 
         @keyframes gradientAnimation {
