--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <style>
         body {
             font-family: 'Inter', sans-serif;
-            background-color: #0d1117; /* Darker base */
+            /* Removed background-color from body to reveal the background-image */
             transition: opacity 0.5s ease-in-out; /* Global transition for fade */
             /* Added background image directly to the body */
             background-image: url('https://i.imgur.com/qmJKSRj.jpeg'); /* Your photo link */
@@ -52,7 +52,8 @@
             background: linear-gradient(45deg, #1f2937, #111827, #0d1117);
             background-size: 400% 400%;
             animation: gradientAnimation 15s ease infinite;
-            z-index: -1;
+            /* Changed z-index to 0 to place it above body background but below content */
+            z-index: 0; 
             opacity: 0.7; /* Make the gradient semi-transparent to allow image to show */
         }
 
